--- a/dylan_scrape.ipynb
+++ b/dylan_scrape.ipynb
@@ -528,53 +528,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chord_lyric_dict = {}\n",
+    "# chord_lyric_dict = {}\n",
+    "\n",
+    "# def get_chords(pl):\n",
+    "#     chord_idxs = []\n",
+    "#     chords = []\n",
+    "#     for i, chord in enumerate(pl['chords']):\n",
+    "#         if pl['chords'][i] != pl[-1]:\n",
+    "#             if c[i+1] == ' ':\n",
+    "#                 chord = chord\n",
+    "#             else:\n",
+    "#                 chord = c[i] + c[i+1] \n",
+    "#         chord_idxs.append(i)\n",
+    "#         chords.append(chord)\n",
+    "#     return chord_idxs, chords \n",
     "\n",
     "def get_chords(pl):\n",
     "    chord_idxs = []\n",
     "    chords = []\n",
-    "    for i, chord in enumerate(pl['chords']):\n",
-    "        if pl['chords'][i] != pl[-1]:\n",
-    "            if c[i+1] == ' ':\n",
-    "                chord = chord\n",
-    "            else:\n",
-    "                chord = c[i] + c[i+1] \n",
-    "        chord_idxs.append(i)\n",
-    "        chords.append(chord)\n",
+    "    c_string = pl['chords']\n",
+    "    for chord in re.finditer('\\w+', c_string):\n",
+    "        chord_idxs.append(chord.start())\n",
+    "        chords.append(chord.group())\n",
     "    return chord_idxs, chords \n",
+    "\n",
+    "    \n",
     "\n",
     "def get_words(pl):\n",
     "    word_idxs = []\n",
-    "    string = pl['words']\n",
-    "    for word in re.finditer('\\w+', string):\n",
+    "    words = []\n",
+    "    w_string = pl['words']\n",
+    "    for word in re.finditer('\\w+', w_string):\n",
     "        word_idxs.append(word.start())\n",
-    "        word_idxs.append(word.group())\n",
+    "        words.append(word.group())\n",
     "#         print (word.start())\n",
     "#         print (word.group())\n",
-    "    return word_idxs\n",
+    "    return word_idxs, words\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "-1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-285-2c0c7afb97ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_chords\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparsed_lines\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-284-d8a0cfcdab2a>\u001b[0m in \u001b[0;36mget_chords\u001b[0;34m(pl)\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mchords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchord\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpl\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'chords'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mpl\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'chords'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mpl\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m                 \u001b[0mchord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchord\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: -1"
-     ]
+     "data": {
+      "text/plain": [
+       "([0, 19, 42, 47, 57], ['Dm', 'C', 'Dm', 'C', 'Dm'])"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -583,43 +593,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0,\n",
-       " 'As',\n",
-       " 3,\n",
-       " 'I',\n",
-       " 5,\n",
-       " 'went',\n",
-       " 10,\n",
-       " 'out',\n",
-       " 14,\n",
-       " 'one',\n",
-       " 18,\n",
-       " 'morning',\n",
-       " 27,\n",
-       " 'to',\n",
-       " 30,\n",
-       " 'breathe',\n",
-       " 38,\n",
-       " 'the',\n",
-       " 42,\n",
-       " 'air',\n",
-       " 46,\n",
-       " 'around',\n",
-       " 53,\n",
-       " 'Tom',\n",
-       " 57,\n",
-       " 'Paine',\n",
-       " 63,\n",
-       " 's']"
+       "([0, 3, 5, 10, 14, 18, 27, 30, 38, 42, 46, 53, 57, 63],\n",
+       " ['As',\n",
+       "  'I',\n",
+       "  'went',\n",
+       "  'out',\n",
+       "  'one',\n",
+       "  'morning',\n",
+       "  'to',\n",
+       "  'breathe',\n",
+       "  'the',\n",
+       "  'air',\n",
+       "  'around',\n",
+       "  'Tom',\n",
+       "  'Paine',\n",
+       "  's'])"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
