finakl day 1 cklean up

--- a/dylan_scrape.ipynb
+++ b/dylan_scrape.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,8 +556,6 @@
     "        chords.append(chord.group())\n",
     "    return chord_idxs, chords \n",
     "\n",
-    "    \n",
-    "\n",
     "def get_words(pl):\n",
     "    word_idxs = []\n",
     "    words = []\n",
@@ -565,15 +563,24 @@
     "    for word in re.finditer('\\w+', w_string):\n",
     "        word_idxs.append(word.start())\n",
     "        words.append(word.group())\n",
-    "#         print (word.start())\n",
-    "#         print (word.group())\n",
-    "    return word_idxs, words\n",
-    "\n"
+    "    return word_idxs, words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def match_chords_words(pl):\n",
+    "    for w in word_idxs:\n",
+    "        for c in chord_idxs:\n",
+    "            if w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +589,7 @@
        "([0, 19, 42, 47, 57], ['Dm', 'C', 'Dm', 'C', 'Dm'])"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +623,7 @@
        "  's'])"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,58 +652,6 @@
    "source": [
     "parsed_line = parsed_lines[0]\n",
     "parsed_line"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'w'"
-      ]
-     },
-     "execution_count": 182,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parsed_line['words'][5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['As',\n",
-       " 'I',\n",
-       " 'went',\n",
-       " 'out',\n",
-       " 'one',\n",
-       " 'morning,',\n",
-       " 'to',\n",
-       " 'breathe',\n",
-       " 'the',\n",
-       " 'air',\n",
-       " 'around',\n",
-       " 'Tom',\n",
-       " \"Paine's\"]"
-      ]
-     },
-     "execution_count": 178,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parsed_line['words'].split(' ')"
    ]
   },
   {
