--- a/dylan_scrape.ipynb
+++ b/dylan_scrape.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "  'words': \"I'm sorry, sir, he said to me, I'm sorry for what she's done\"}]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 498,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,6 +547,8 @@
     "#         chords.append(chord)\n",
     "#     return chord_idxs, chords \n",
     "\n",
+    "# def main()\n",
+    "\n",
     "def get_chords(pl):\n",
     "    chord_idxs = []\n",
     "    chords = []\n",
@@ -554,7 +556,8 @@
     "    for chord in re.finditer('\\w+', c_string):\n",
     "        chord_idxs.append(chord.start())\n",
     "        chords.append(chord.group())\n",
-    "    return chord_idxs, chords \n",
+    "    chord_tups = list(zip(chord_idxs, chords))\n",
+    "    return chord_idxs, chords, chord_tups\n",
     "\n",
     "def get_words(pl):\n",
     "    word_idxs = []\n",
@@ -563,33 +566,149 @@
     "    for word in re.finditer('\\w+', w_string):\n",
     "        word_idxs.append(word.start())\n",
     "        words.append(word.group())\n",
-    "    return word_idxs, words"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    word_tups = list(zip(word_idxs, words))\n",
+    "    return word_idxs, words, word_tups\n",
+    "\n",
     "def match_chords_words(pl):\n",
-    "    for w in word_idxs:\n",
-    "        for c in chord_idxs:\n",
-    "            if w"
+    "    gw = get_words(pl)[2]\n",
+    "    gc = get_chords(pl)[2]\n",
+    "    word_idxs = get_words(pl)[0]\n",
+    "    words = pl['words']\n",
+    "    ch_words = []\n",
+    "#     lyrics = []\n",
+    "    for (i, w) in gw:\n",
+    "        for (j, c) in gc:\n",
+    "            if i == j: \n",
+    "                ch_words.append((w, c))\n",
+    "            else:\n",
+    "                if i-10 in word_idxs: \n",
+    "                    lyrics = words[i-10: i+5]\n",
+    "                    if \n",
+    "                    ch_words.append((c, lyrics))\n",
+    "    return ch_words\n",
+    "\n",
+    "#                 return [ (w, c) for i in range(j-3, j+2) ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 499,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0, 19, 42, 47, 57], ['Dm', 'C', 'Dm', 'C', 'Dm'])"
+       "[('As', 'Dm'),\n",
+       " ('Dm', 'As I went out o'),\n",
+       " ('C', 'As I went out o'),\n",
+       " ('Dm', 'As I went out o'),\n",
+       " ('C', 'As I went out o'),\n",
+       " ('Dm', 'As I went out o'),\n",
+       " ('air', 'Dm'),\n",
+       " ('Paine', 'Dm'),\n",
+       " ('Dm', \"Tom Paine's\"),\n",
+       " ('C', \"Tom Paine's\"),\n",
+       " ('Dm', \"Tom Paine's\"),\n",
+       " ('C', \"Tom Paine's\"),\n",
+       " ('Dm', \"Tom Paine's\")]"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 499,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match_chords_words(parsed_line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 481,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['As',\n",
+       " 'I',\n",
+       " 'went',\n",
+       " 'out',\n",
+       " 'one',\n",
+       " 'morning',\n",
+       " 'to',\n",
+       " 'breathe',\n",
+       " 'the',\n",
+       " 'air',\n",
+       " 'around',\n",
+       " 'Tom',\n",
+       " 'Paine',\n",
+       " 's']"
+      ]
+     },
+     "execution_count": 481,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_words(parsed_line)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 416,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'Dm'), (19, 'C'), (42, 'Dm'), (47, 'C'), (57, 'Dm')]"
+      ]
+     },
+     "execution_count": 416,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_chords(parsed_line)[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 411,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-411-caa1e7e8c950>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmatch_chords_words\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparsed_line\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-410-668941cc5af6>\u001b[0m in \u001b[0;36mmatch_chords_words\u001b[0;34m(pl)\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0mgw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_words\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0mgc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_chords\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgw\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 380,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0, 19, 42, 47, 57],\n",
+       " ['Dm', 'C', 'Dm', 'C', 'Dm'],\n",
+       " [(0, 'Dm'), (19, 'C'), (42, 'Dm'), (47, 'C'), (57, 'Dm')])"
+      ]
+     },
+     "execution_count": 380,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +719,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 381,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 381,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(gw[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
@@ -620,10 +759,24 @@
        "  'around',\n",
        "  'Tom',\n",
        "  'Paine',\n",
-       "  's'])"
+       "  's'],\n",
+       " [(0, 'As'),\n",
+       "  (3, 'I'),\n",
+       "  (5, 'went'),\n",
+       "  (10, 'out'),\n",
+       "  (14, 'one'),\n",
+       "  (18, 'morning'),\n",
+       "  (27, 'to'),\n",
+       "  (30, 'breathe'),\n",
+       "  (38, 'the'),\n",
+       "  (42, 'air'),\n",
+       "  (46, 'around'),\n",
+       "  (53, 'Tom'),\n",
+       "  (57, 'Paine'),\n",
+       "  (63, 's')])"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +797,7 @@
        " 'words': \"As I went out one morning, to breathe the air around Tom Paine's\"}"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,6 +805,49 @@
    "source": [
     "parsed_line = parsed_lines[0]\n",
     "parsed_line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'chords': 'Dm                 C                      Dm   C         Dm',\n",
+       "  'words': \"As I went out one morning, to breathe the air around Tom Paine's\"},\n",
+       " {'chords': '    Dm               C            Dm      C       Dm',\n",
+       "  'words': 'I spied the fairest damsel, that ever did walk in chains'},\n",
+       " {'chords': '    F              Am       Dm    C       Dm',\n",
+       "  'words': \"I offer'd her my hand, she took me by the arm\"},\n",
+       " {'chords': '    Dm            C            Dm      C    Dm',\n",
+       "  'words': 'I knew that very instant, she meant to do me harm'},\n",
+       " {'chords': 'Dm                 C             Dm       C     Dm',\n",
+       "  'words': 'Depart from me this moment, I told her with my voice'},\n",
+       " {'chords': ' Dm                       C       Dm            C        Dm',\n",
+       "  'words': 'Said she, \"But I don\\'t wish to, said I, but you have no choice'},\n",
+       " {'chords': 'F                 Am         Dm                C       Dm',\n",
+       "  'words': 'I beg you, sir, she pleaded, from the corners of her mouth'},\n",
+       " {'chords': 'Dm                C               Dm        C         Dm',\n",
+       "  'words': \"I will secretly accept you, and together we'll fly south\"},\n",
+       " {'chords': 'Dm                     C               Dm        C         Dm',\n",
+       "  'words': 'Just then Tom Paine, himself, came running from across the field'},\n",
+       " {'chords': 'Dm               C                     Dm      C       Dm',\n",
+       "  'words': 'Shouting at this lovely girl, and commanding her to yield'},\n",
+       " {'chords': 'F                         Am         Dm    C       Dm',\n",
+       "  'words': 'And as she was letting go her grip, up Tom Paine did run'},\n",
+       " {'chords': 'Dm                   C            Dm      C              Dm',\n",
+       "  'words': \"I'm sorry, sir, he said to me, I'm sorry for what she's done\"}]"
+      ]
+     },
+     "execution_count": 314,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parsed_lines"
    ]
   },
   {
