--- a/notebooks/dylan_parse.ipynb
+++ b/notebooks/dylan_parse.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -411,14 +411,14 @@
        " 'words': \"As I went out one morning, to breathe the air around Tom Paine's\"}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "first_line = parsed_lines[0]\n",
-    "first_line"
+    "parsed_line = parsed_lines[0]\n",
+    "parsed_line"
    ]
   },
   {
@@ -498,28 +498,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'chords': 'Dm                 C                      Dm   C         Dm',\n",
-       " 'words': \"As I went out one morning, to breathe the air around Tom Paine's\"}"
+       "{'chords': '    Dm               C            Dm      C       Dm',\n",
+       " 'words': 'I spied the fairest damsel, that ever did walk in chains'}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parsed_lines[0]"
+    "parsed_lines[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,41 +570,188 @@
     "        for (j, c) in gc: \n",
     "            if i == j: \n",
     "                ch_words.append((w, c))\n",
-    "            elif i in range(j-12,j+3):\n",
-    "                ch_words.append((c, words[i: i+5]))\n",
     "\n",
-    "#                 lyrics.append(w)\n",
-    "#                 ch_words.append((c, lyrics))\n",
-    "#                     if j-12 in word_idxs:\n",
-    "#                         ch_words.append((c, words[j-12: j+4]))\n",
-    "\n",
-    "    return ch_words"
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def match_ch_wd(parsed_line):\n",
+    "    word_tups = get_words(parsed_line)[2]\n",
+    "    chord_tups = get_chords(parsed_line)[2]\n",
+    "    word_list = get_words(parsed_line)[1]\n",
+    "    word_chord_idx_list = []\n",
+    "    for ch_tup in chord_tups: \n",
+    "        for i, wd_tup in enumerate(word_tups):\n",
+    "            if wd_tup[0] > ch_tup[0]:\n",
+    "                word_chord_idx_list.append((i-1, ch_tup[1]))\n",
+    "                break \n",
+    "    return (word_chord_idx_list, word_list)\n",
+    "\n",
+    "# ch_tup[0] <= "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine_ch_wd_list(parsed_line_0, parsed_line_1):\n",
+    "    ch_tups_0, wd_list_0 = match_ch_wd(parsed_line_0)\n",
+    "    ch_tups_1, wd_list_1 = match_ch_wd(parsed_line_1)\n",
+    "    new_tups = []\n",
+    "#     combo_lists = []\n",
+    "    for ch_tup_1 in ch_tups_1:\n",
+    "        new_tups.append( ( ((ch_tup_1)[0]+len(wd_list_0)), ch_tup_1[1] ) )\n",
+    "    combo_tups = ch_tups_0 + new_tups \n",
+    "    combo_lists = wd_list_0 + wd_list_1\n",
+    "    return combo_tups, combo_lists "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('As', 'Dm'),\n",
-       " ('C', 'out o'),\n",
-       " ('C', 'one m'),\n",
-       " ('C', 'morni'),\n",
-       " ('Dm', 'breat'),\n",
-       " ('Dm', 'the a'),\n",
-       " ('C', 'the a'),\n",
-       " ('air', 'Dm'),\n",
-       " ('C', 'air a'),\n",
-       " ('C', 'aroun'),\n",
-       " ('Dm', 'aroun'),\n",
-       " ('Dm', 'Tom P'),\n",
-       " ('Paine', 'Dm')]"
+       "([(0, 'Dm'),\n",
+       "  (5, 'C'),\n",
+       "  (9, 'Dm'),\n",
+       "  (10, 'C'),\n",
+       "  (12, 'Dm'),\n",
+       "  (15, 'Dm'),\n",
+       "  (18, 'C'),\n",
+       "  (20, 'Dm'),\n",
+       "  (22, 'C')],\n",
+       " ['As',\n",
+       "  'I',\n",
+       "  'went',\n",
+       "  'out',\n",
+       "  'one',\n",
+       "  'morning',\n",
+       "  'to',\n",
+       "  'breathe',\n",
+       "  'the',\n",
+       "  'air',\n",
+       "  'around',\n",
+       "  'Tom',\n",
+       "  'Paine',\n",
+       "  's',\n",
+       "  'I',\n",
+       "  'spied',\n",
+       "  'the',\n",
+       "  'fairest',\n",
+       "  'damsel',\n",
+       "  'that',\n",
+       "  'ever',\n",
+       "  'did',\n",
+       "  'walk',\n",
+       "  'in',\n",
+       "  'chains'])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combine_ch_wd_list(parsed_lines[0], parsed_lines[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "le"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([(0, 'Dm'), (5, 'C'), (9, 'Dm'), (10, 'C'), (12, 'Dm')],\n",
+       " ['As',\n",
+       "  'I',\n",
+       "  'went',\n",
+       "  'out',\n",
+       "  'one',\n",
+       "  'morning',\n",
+       "  'to',\n",
+       "  'breathe',\n",
+       "  'the',\n",
+       "  'air',\n",
+       "  'around',\n",
+       "  'Tom',\n",
+       "  'Paine',\n",
+       "  's'])"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match_ch_wd(parsed_lines[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([(1, 'Dm'), (4, 'C'), (6, 'Dm'), (8, 'C')],\n",
+       " ['I',\n",
+       "  'spied',\n",
+       "  'the',\n",
+       "  'fairest',\n",
+       "  'damsel',\n",
+       "  'that',\n",
+       "  'ever',\n",
+       "  'did',\n",
+       "  'walk',\n",
+       "  'in',\n",
+       "  'chains'])"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "match_ch_wd(parsed_lines[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('As', 'Dm'), ('air', 'Dm'), ('Paine', 'Dm')]"
+      ]
+     },
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
