running python file to begin scraping

--- a/src/scrape_dylan.ipynb
+++ b/src/scrape_dylan.ipynb
@@ -2,41 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-77f8886da2d7>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-77f8886da2d7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    from /Users/emilynaftalin/galvanize/dsi/capstone/Guitar-Chord-Generator/src/scrape_code import *\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from /Users/emilynaftalin/galvanize/dsi/capstone/Guitar-Chord-Generator/src/scrape_code import *"
+    "from scrape_code import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "attempted relative import beyond top-level package",
+     "data": {
+      "text/plain": [
+       "['https://www.ultimate-guitar.com/artist/bob_dylan_10212?filter=chords&page=0',\n",
+       " 'https://www.ultimate-guitar.com/artist/bob_dylan_10212?filter=chords&page=1',\n",
+       " 'https://www.ultimate-guitar.com/artist/bob_dylan_10212?filter=chords&page=2',\n",
+       " 'https://www.ultimate-guitar.com/artist/bob_dylan_10212?filter=chords&page=3',\n",
+       " 'https://www.ultimate-guitar.com/artist/bob_dylan_10212?filter=chords&page=4',\n",
+       " 'https://www.ultimate-guitar.com/artist/bob_dylan_10212?filter=chords&page=5',\n",
+       " 'https://www.ultimate-guitar.com/artist/bob_dylan_10212?filter=chords&page=6',\n",
+       " 'https://www.ultimate-guitar.com/artist/bob_dylan_10212?filter=chords&page=7',\n",
+       " 'https://www.ultimate-guitar.com/artist/bob_dylan_10212?filter=chords&page=8',\n",
+       " 'https://www.ultimate-guitar.com/artist/bob_dylan_10212?filter=chords&page=9',\n",
+       " 'https://www.ultimate-guitar.com/artist/bob_dylan_10212?filter=chords&page=10']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "make_urls(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'artist_urls' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-4cc0eb0a024a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m...\u001b[0m\u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscrape_code\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: attempted relative import beyond top-level package"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-e1d9110bf857>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_all_urls\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0martist_urls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'artist_urls' is not defined"
      ]
     }
    ],
    "source": [
-    "from ...src.scrape_code import *"
+    "get_all_urls(artist_urls)"
    ]
   },
   {
