scraping code working

--- a/notebooks/scrape_day_2.ipynb
+++ b/notebooks/scrape_day_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,38 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artist_url = 'https://www.ultimate-guitar.com/artist/bob_dylan_10212?filter=chords'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "browser = Chrome()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "browser.get(artist_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "time.sleep(5)"
+    "paul_url = 'https://www.ultimate-guitar.com/artist/paul_simon_11328?filter=chords'"
    ]
   },
   {
@@ -57,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "html = browser.page_source"
+    "browser = Chrome()"
    ]
   },
   {
@@ -66,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc = pymongo.MongoClient()"
+    "browser.get(paul_url)"
    ]
   },
   {
@@ -75,12 +48,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "time.sleep(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html = browser.page_source"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc = pymongo.MongoClient()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "db = mc['chordify']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,23 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x10ce14678>"
+       "<pymongo.results.InsertOneResult at 0x112c21318>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "raw_html.insert_one(\n",
-    "    {'url': url,\n",
+    "    {'url': paul_url,\n",
     "     'datetime': datetime.datetime.now(),\n",
     "     'html': html \n",
     "    })"
@@ -117,12 +117,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " "
+    "html = browser.page_source\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +132,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<a class=\"link-primary _1kcZ5\" href=\"https://tabs.ultimate-guitar.com/tab/wyclef_jean/fast_car_chords_2326153\">Fast Car</a>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_block[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,16 +161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://tabs.ultimate-guitar.com/tab/bob_dylan/blood_on_the_tracks_chords_698381'"
+       "'https://tabs.ultimate-guitar.com/tab/wyclef_jean/fast_car_chords_2326153'"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,11 +190,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://tabs.ultimate-guitar.com/tab/wyclef_jean/fast_car_chords_2326153',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/dion/new_york_is_my_home_chords_1844039',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/randy_newman/the_blues_chords_638594',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/randy_newman/the_blues_chords_1063113',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/art_garfunkel/what_a_wonderful_world_chords_86701',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/art_garfunkel/what_a_wonderful_world_chords_1815907',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/art_garfunkel/what_a_wonderful_world_chords_1898951',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/art_garfunkel/what_a_wonderful_world_chords_2326549',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/10_years_chords_1087899',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/50_ways_to_leave_your_lover_chords_84852',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/50_ways_to_leave_your_lover_chords_389796',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/50_ways_to_leave_your_lover_chords_678564',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/50_ways_to_leave_your_lover_chords_929345',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/50_ways_to_leave_your_lover_chords_1074368',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/50_ways_to_leave_your_lover_chords_1443591',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/50_ways_to_leave_your_lover_chords_1507685',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/a_simple_desultory_philippic_chords_524477',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/all_around_the_world_or_the_myth_of_fingerprints_chords_1871569',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/allergies_chords_1736385',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/american_tune_chords_84848',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/american_tune_chords_84868',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/american_tune_chords_1042688',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/another_galaxy_chords_1871572',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/april_come_she_will_chords_803554',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/armistice_day_chords_2072701',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/born_at_the_right_time_chords_1129852',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/born_at_the_right_time_chords_1401045',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/born_in_puerto_rico_chords_722034',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/can_i_forgive_him_chords_2105159',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/cecilia_chords_84870',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/cecilia_chords_759562',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/cecilia_chords_1477120',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/crazy_love_vol_2_chords_1701842',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/dazzling_blue_chords_1862968',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/diamonds_on_the_soles_of_her_shoes_chords_377461',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/diamonds_on_the_soles_of_her_shoes_chords_788180',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/diamonds_on_the_soles_of_her_shoes_chords_1128322',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/duncan_chords_84850',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/duncan_chords_1761188',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/el_condor_pasa_chords_84851',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/everything_put_together_falls_apart_chords_1009697',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/father_and_daughter_chords_431991',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/father_and_daughter_chords_1748529',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/flowers_never_bend_with_the_rainfall_chords_803825',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/for_emily_whenever_i_may_find_her_chords_1061665',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/graceland_chords_814181',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/graceland_chords_1057907',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/graceland_chords_1834602',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/gumboots_chords_1740048',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/hearts_and_bones_chords_1000593',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/how_the_heart_approaches_what_it_yearns_chords_1716258',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/hurricane_eye_chords_1775240',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/i_know_what_i_know_chords_738359',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/jonah_chords_1717399',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/kathys_song_chords_84856',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/kathys_song_chords_1815667',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/kathys_song_chords_1815904',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/koda_chrome_chords_650046',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/kodachrome_chords_165459',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/kodachrome_chords_850921',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/kodachrome_chords_984438',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/kodachrome_chords_1099242',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/kodachrome_chords_1517831',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/krapp_sving_chords_1669798',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/late_in_the_evening_chords_507904',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/late_in_the_evening_chords_731682',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/late_in_the_evening_chords_766479',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/late_in_the_evening_chords_1709827',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/learn_how_to_fall_chords_1114059',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/learn_how_to_fall_chords_1857738',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/leaves_that_are_green_chords_521749',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/love_chords_1730088',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/loves_me_like_a_rock_chords_766860',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/me_and_julio_down_by_the_schoolyard_chords_84858',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/me_and_julio_down_by_the_schoolyard_chords_357470',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/me_and_julio_down_by_the_schoolyard_chords_1062117',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/me_and_julio_down_by_the_schoolyard_chords_1857885',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/mother_and_child_reunion_chords_84859',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/mother_and_child_reunion_chords_766475',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/mother_and_child_reunion_chords_1232167',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/mother_and_child_reunion_chords_1250326',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/mrs_robinson_chords_184639',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/oh_marion_chords_1717429',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/old_chords_1677895',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/one_mans_ceiling_is_another_mans_floor_chords_1114208',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/one_trick_pony_chords_1512906',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/overs_chords_1730598',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/papa_hobo_chords_1114207',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/paranoia_blues_chords_1813850',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/punkys_dilemma_chords_1775058',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/rene_and_georgette_magritte_with_their_dog_after_the_war_chords_1709825',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/run_that_body_down_chords_1114205',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/silent_eyes_chords_1028167',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/slip_slidin_away_chords_855458',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/slip_slidin_away_chords_908217',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/slip_sliding_away_chords_84861',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/slip_sliding_away_chords_192892',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/slip_sliding_away_chords_1052992',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/something_so_right_chords_1161857',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/something_so_right_chords_1724421',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/something_so_right_chords_1746926',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/song_about_the_moon_chords_675435',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/st_judys_comet_chords_1445316',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/still_crazy_after_all_these_years_chords_818927',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/still_crazy_after_all_these_years_chords_823975',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/still_crazy_after_all_these_years_chords_1394914',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/still_crazy_after_all_these_years_chords_1743602',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/paul_simon/still_crazy_after_all_these_years_chords_1760361']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "links;"
+    "links"
    ]
   },
   {
