recent work to avoid losing

--- a/notebooks/parse_from_database.ipynb
+++ b/notebooks/parse_from_database.ipynb
@@ -17,28 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mc = pymongo.MongoClient()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = mc['chordify']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "mc = pymongo.MongoClient()\n",
+    "\n",
+    "db = mc['chordify']\n",
+    "\n",
     "raw_html = db['raw_html']"
    ]
   },
@@ -129,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +139,7 @@
     "            in_tag = False\n",
     "    return ''.join(result)\n",
     "\n",
-    "# def parse_lines(html_doc)\n",
+    "\n",
     "def separate_lines(html_doc):\n",
     "    song_lines = get_lines_from_song(html_doc)\n",
     "    lines = []\n",
@@ -167,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +246,7 @@
        " {'chords': '      F             C', 'words': \"He'll stop the next war.\"}]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
