improving nlp code

--- a/notebooks/clean_parse.ipynb
+++ b/notebooks/clean_parse.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,12 +111,23 @@
     "    return chord_idxs, chords, chord_tups\n",
     "\n",
     "\n",
+    "# def get_words(line):\n",
+    "#     word_idxs = []\n",
+    "#     words = []\n",
+    "#     if 'words'in line:\n",
+    "#         w_string = line['words']\n",
+    "#         for word in re.finditer('\\w+', w_string):\n",
+    "#             word_idxs.append(word.start())\n",
+    "#             words.append(word.group())\n",
+    "#     word_tups = list(zip(word_idxs, words))\n",
+    "#     return word_idxs, words, word_tups\n",
+    "\n",
     "def get_words(line):\n",
     "    word_idxs = []\n",
     "    words = []\n",
     "    if 'words'in line:\n",
     "        w_string = line['words']\n",
-    "        for word in re.finditer('\\w+', w_string):\n",
+    "        for word in re.finditer(r\"\\w[\\w']+\", w_string):\n",
     "            word_idxs.append(word.start())\n",
     "            words.append(word.group())\n",
     "    word_tups = list(zip(word_idxs, words))\n",
@@ -159,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +194,7 @@
        " 'url': 'https://tabs.ultimate-guitar.com/tab/bob_dylan/all_along_the_watchtower_chords_1090598'}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,11 +206,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([(-1, 'Intro'),\n",
+       "  (-1, 'Am'),\n",
+       "  (-1, 'G'),\n",
+       "  (-1, 'F'),\n",
+       "  (-1, 'G'),\n",
+       "  (4, 'Am'),\n",
+       "  (8, 'G'),\n",
+       "  (10, 'F'),\n",
+       "  (12, 'Am'),\n",
+       "  (15, 'G'),\n",
+       "  (18, 'Am'),\n",
+       "  (21, 'G'),\n",
+       "  (22, 'Am'),\n",
+       "  (24, 'G'),\n",
+       "  (26, 'Am'),\n",
+       "  (28, 'G'),\n",
+       "  (30, 'F'),\n",
+       "  (32, 'Am'),\n",
+       "  (33, 'G'),\n",
+       "  (36, 'Am'),\n",
+       "  (40, 'G'),\n",
+       "  (41, 'F'),\n",
+       "  (43, 'Am'),\n",
+       "  (46, 'G'),\n",
+       "  (50, 'Am'),\n",
+       "  (53, 'G'),\n",
+       "  (55, 'Am'),\n",
+       "  (58, 'G'),\n",
+       "  (60, 'Am'),\n",
+       "  (63, 'G'),\n",
+       "  (65, 'F'),\n",
+       "  (66, 'Am'),\n",
+       "  (70, 'G'),\n",
+       "  (73, 'Am'),\n",
+       "  (76, 'G'),\n",
+       "  (78, 'F'),\n",
+       "  (80, 'Am'),\n",
+       "  (83, 'G'),\n",
+       "  (86, 'Am'),\n",
+       "  (90, 'G'),\n",
+       "  (92, 'F'),\n",
+       "  (93, 'Am'),\n",
+       "  (96, 'G'),\n",
+       "  (98, 'Am'),\n",
+       "  (100, 'G'),\n",
+       "  (102, 'Am'),\n",
+       "  (104, 'G'),\n",
+       "  (107, 'Am'),\n",
+       "  (111, 'G'),\n",
+       "  (112, 'F'),\n",
+       "  (114, 'Am'),\n",
+       "  (116, 'G'),\n",
+       "  (117, 'Am'),\n",
+       "  (119, 'G'),\n",
+       "  (121, 'Am'),\n",
+       "  (123, 'G'),\n",
+       "  (125, 'Am'),\n",
+       "  (128, 'G'),\n",
+       "  (129, 'Am'),\n",
+       "  (132, 'G')],\n",
+       " ['quick',\n",
+       "  'transtion',\n",
+       "  'through',\n",
+       "  'to',\n",
+       "  'Am',\n",
+       "  'There',\n",
+       "  'must',\n",
+       "  'be',\n",
+       "  'some',\n",
+       "  'way',\n",
+       "  'out',\n",
+       "  'of',\n",
+       "  'here',\n",
+       "  'Said',\n",
+       "  'the',\n",
+       "  'joker',\n",
+       "  'to',\n",
+       "  'the',\n",
+       "  'thief',\n",
+       "  \"There's\",\n",
+       "  'too',\n",
+       "  'much',\n",
+       "  'confusion',\n",
+       "  \"can't\",\n",
+       "  'get',\n",
+       "  'no',\n",
+       "  'relief',\n",
+       "  'Business',\n",
+       "  'men',\n",
+       "  'they',\n",
+       "  'drink',\n",
+       "  'my',\n",
+       "  'wine',\n",
+       "  'Plowmen',\n",
+       "  'dig',\n",
+       "  'my',\n",
+       "  'earth',\n",
+       "  'But',\n",
+       "  'none',\n",
+       "  'of',\n",
+       "  'them',\n",
+       "  'along',\n",
+       "  'the',\n",
+       "  'line',\n",
+       "  'Know',\n",
+       "  'what',\n",
+       "  'any',\n",
+       "  'of',\n",
+       "  'it',\n",
+       "  'is',\n",
+       "  'worth',\n",
+       "  'No',\n",
+       "  'reason',\n",
+       "  'to',\n",
+       "  'get',\n",
+       "  'excited',\n",
+       "  'The',\n",
+       "  'thief',\n",
+       "  'he',\n",
+       "  'kindly',\n",
+       "  'spoke',\n",
+       "  'There',\n",
+       "  'are',\n",
+       "  'many',\n",
+       "  'here',\n",
+       "  'among',\n",
+       "  'us',\n",
+       "  'Who',\n",
+       "  'feel',\n",
+       "  'that',\n",
+       "  'life',\n",
+       "  'is',\n",
+       "  'but',\n",
+       "  'joke',\n",
+       "  'But',\n",
+       "  'you',\n",
+       "  'and',\n",
+       "  \"we've\",\n",
+       "  'been',\n",
+       "  'through',\n",
+       "  'that',\n",
+       "  'And',\n",
+       "  'this',\n",
+       "  'is',\n",
+       "  'not',\n",
+       "  'our',\n",
+       "  'fate',\n",
+       "  'So',\n",
+       "  'let',\n",
+       "  'us',\n",
+       "  'not',\n",
+       "  'talk',\n",
+       "  'falsely',\n",
+       "  'now',\n",
+       "  'The',\n",
+       "  'hour',\n",
+       "  'is',\n",
+       "  'getting',\n",
+       "  'late',\n",
+       "  'All',\n",
+       "  'along',\n",
+       "  'the',\n",
+       "  'watchtower',\n",
+       "  'The',\n",
+       "  'princes',\n",
+       "  'kept',\n",
+       "  'the',\n",
+       "  'view',\n",
+       "  'While',\n",
+       "  'all',\n",
+       "  'the',\n",
+       "  'women',\n",
+       "  'came',\n",
+       "  'and',\n",
+       "  'went',\n",
+       "  'Barefoot',\n",
+       "  'servants',\n",
+       "  'too',\n",
+       "  'Outside',\n",
+       "  'in',\n",
+       "  'the',\n",
+       "  'distance',\n",
+       "  'wild',\n",
+       "  'cat',\n",
+       "  'did',\n",
+       "  'growl',\n",
+       "  'Two',\n",
+       "  'riders',\n",
+       "  'were',\n",
+       "  'approaching',\n",
+       "  'The',\n",
+       "  'wind',\n",
+       "  'began',\n",
+       "  'to',\n",
+       "  'howl'])"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "one_song = parse_song(html_docs[33])"
+    "one_song = parse_song(html_docs[33])\n",
+    "one_song"
    ]
   },
   {
